--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -15,12 +15,12 @@
       android:scaleType="centerInside" />
 
     <!-- Thumbnail Image -->
-    <com.android.volley.toolbox.NetworkImageView
-        android:id="@+id/thumbnail"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_alignParentLeft="true"
-        android:layout_marginRight="8dp" />
+    <ImageView
+      android:id="@+id/thumbnail"
+      android:layout_width="100dp"
+      android:layout_height="100dp"
+      android:layout_alignParentLeft="true"
+      android:layout_marginRight="8dp" />
 
     <!-- Movie Title -->
     <TextView
